--- a/startpage.html
+++ b/startpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Start</title>
+<title>e-minguez start up page</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="icon" href="favicon.ico" />
@@ -22,14 +22,8 @@
 </div>
 
 <div class="dropdown">
-    <a href="#">
-    <button2>Single Link</button2>
-    </a>
-</div>
-
-<div class="dropdown">
-    <a href="#">
-    <button3>Another Single Link</button3>
+    <a href="https://www.reddit.com">
+    <button2>Reddit</button2>
     </a>
 </div>
 
@@ -41,26 +35,12 @@
 
     <!-- dropdown menu -->
     <ul class="dropdown-menu">
-        <li><a class="drop" href="#">Link</a></li>
-        <li><a class="drop" href="#">Linkly Link</a></li>
-        <li><a class="drop" href="#">Linkzoid</a></li>
-        <li><a class="drop" href="#">Link</a></li>
-        <li><a class="drop" href="#">Link 22</a></li>
-        <li><a class="drop" href="#">Link me up fam</a></li>
-    </ul>
-</div>
-
-<div class="dropdown">
-    <button5>Dropdown List &#9660;</button5>
-    <ul class="dropdown-menu">
-        <li><a class="drop" href="#">Link</a></li>
-    </ul>
-</div>
-
-<div class="dropdown">
-    <button6>List Menu &#9660;</button6>
-    <ul class="dropdown-menu">
-        <li><a class="drop" href="#">Link</a></li>
+        <li><a class="drop" href="https://www.meneame.net/m/emnm/">Meneame</a></li>
+        <li><a class="drop" href="https://news.ycombinator.com/">Hacker News</a></li>
+        <li><a class="drop" href="https://lobste.rs/">Lobsters</a></li>
+        <li><a class="drop" href="https://feedly.com/i/latest">Feedly</a></li>
+        <li><a class="drop" href="https://www.elotrolado.net/">EOL</a></li>
+        <li><a class="drop" href="http://forocoches.com/foro/">Forocoches</a></li>
     </ul>
 </div>
 
