Added blog and fixed some links

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
 						-->
 						<footer>
 							<ul class="icons">
+								<li><a href="https://b.minwi.com" class="fa-rss">Blog</a></li>
 								<li><a href="https://twitter.com/minWi" class="fa-twitter">Twitter</a></li>
-								<li><a href="https://www.linkedin.com/in/eminguez/" class="fa-linkedin">Instagram</a></li>
+								<li><a href="https://www.linkedin.com/in/eminguez/" class="fa-linkedin">Linkedin</a></li>
 								<li><a href="https://github.com/e-minguez/" class="fa-github">GitHub</a></li>
+								<li><a href="https://gitlab.com/minWi/" class="fa-gitlab">GitLab</a></li>
 							</ul>
 						</footer>
 					</section>
