--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+                <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+                <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 	</head>
 	<body class="is-loading">
 
