--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="https://b.minwi.com" class="fa-rss">Blog</a></li>
+								<li><a href="https://www.underkube.com" class="fa-rss">Blog</a></li>
 								<li><a href="https://twitter.com/minWi" class="fa-twitter">Twitter</a></li>
 								<li><a href="https://www.linkedin.com/in/eminguez/" class="fa-linkedin">Linkedin</a></li>
 								<li><a href="https://github.com/e-minguez/" class="fa-github">GitHub</a></li>
