Changed avatar and added some stuff :)

--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/avatar.png" alt="" /></span>
 							<h1>Eduardo Minguez</h1>
-							<p>Senior System Engineer, Red Hat</p>
+							<p>Lifelong tinkerer.</p>
+							<p>Opensource & 'cloud native' technologies.</p>
+                                                        <p>Explorer.</p>
+							<p>underkube.com blogger.</p>
+							<p>Senior SysEng at Red Hat.</p>
 						</header>
 						<!--
 						<hr />
