--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<p>Opensource & 'cloud native' technologies.</p>
                                                         <p>Explorer.</p>
 							<p>underkube.com blogger.</p>
-							<p>Senior SysEng at Red Hat.</p>
+							<p>Principal SysEng at Red Hat.</p>
 						</header>
 						<!--
 						<hr />
