--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://www.underkube.com" class="fa-rss">Blog</a></li>
-								<li><a href="https://tty0.social/@minWi" class="fa-brands fa-mastodon">Mastodon</a></li>
+								<li><a rel="me" href="https://tty0.social/@minWi" class="fa-brands fa-mastodon">Mastodon</a></li>
 								<li><a href="https://twitter.com/minWi" class="fa-twitter">Twitter</a></li>
 								<li><a href="https://www.linkedin.com/in/eminguez/" class="fa-linkedin">Linkedin</a></li>
 								<li><a href="https://github.com/e-minguez/" class="fa-github">GitHub</a></li>
