--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<p>Opensource & 'cloud native' technologies.</p>
               <p>Explorer.</p>
 							<p>underkube.com blogger.</p>
-							<p>Technical Marketing Manager at Sysdig.</p>
+							<p>Senior Edge Container Engineer at SUSE.</p>
 						</header>
 						<footer>
 							<ul class="icons">
