--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 						<ul class="copyright">
 							<li>&copy; Eduardo Minguez Perez</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
+						<a href="https://librecounter.org/referer/show" target="_blank">
+<img src="https://librecounter.org/oldStyle.svg" referrerPolicy="unsafe-url" />
+</a>
 					</footer>
 
 			</div>
@@ -65,3 +68,4 @@
 
 	</body>
 </html>
+
